# qfusionReadMeUpdate

./: .gitignore  .gitmodules  README.md
source/client/: CMakeLists.txt  animatedvalues.h  cl_demo.cpp  cl_game.cpp  cl_input.cpp  cl_main.cpp  cl_mm.cpp  cl_mm.h  cl_parse.cpp  cl_screen.cpp  cl_snap.cpp  cl_sound.cpp  cl_vid.cpp  client.h  console.cpp  console.h  imageloading.cpp  imageloading.h  input.h  keys.cpp  keys.h  profilerhud.cpp  serverinfoparser.cpp  serverinfoparser.h  serverlist.cpp  serverlist.h  snd_public.h  vid.h
source/client/tests/: CMakeLists.txt  main.cpp  materialparsertest.cpp  materialparsertest.h
source/common/: CMakeLists.txt  asyncstream.cpp  bsp.cpp  bsp.h  cm_local.h  cm_main.cpp  cm_q3bsp.cpp  cm_sample.cpp  cm_trace.cpp  cm_trace.h  cm_trace_avx.cpp  cm_trace_sse42.cpp  cmdargs.h  cmdargssplitter.cpp  cmdargssplitter.h  cmdcompat.h  cmdsystem.cpp  cmdsystem.h  commandshandler.h  common.cpp  common.h  compression.cpp  configstringstorage.cpp  configstringstorage.h  configvars.cpp  configvars.h  cvar.cpp  cvar.h  demometadata.h  enumtokenmatcher.h  files.cpp  gs_gameteams.cpp  gs_items.cpp  gs_misc.cpp  gs_pmove.cpp  gs_public.h  gs_qrespath.h  gs_ref.h  gs_slidebox.cpp  gs_weapondefs.cpp  (+60 more)
source/common/tests/: .gitignore  CMakeLists.txt  README.md  boundsbuildertest.cpp  bufferedreadertest.cpp  configstringstoragetest.cpp  demometadatatest.cpp  freelistallocatortest.cpp  freelistallocatortest.h  fsutilstest.cpp  main.cpp  stringviewtest.cpp  tonumtest.cpp  userinfotest.cpp  userinfotest.h
source/game/: CMakeLists.txt  chat.cpp  chat.h  client.cpp  commandshandler.h  g_as_gametypes.cpp  g_as_local.h  g_as_maps.cpp  g_ascript.cpp  g_awards.cpp  g_callvotes.cpp  g_chase.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_frame.cpp  g_func.cpp  g_gameteams.cpp  g_gametypes.cpp  g_gametypes.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_mm.cpp  g_phys.cpp  g_public.h  g_spawn.cpp  g_spawnpoints.cpp  g_svcmds.cpp  g_syscalls.cpp  g_syscalls.h  g_target.cpp  g_trigger.cpp  g_utils.cpp  g_weapon.cpp  p_client.cpp  p_hud.cpp  p_view.cpp  scoreboard.cpp  (+1 more)
source/game/ai/: ai.cpp  ai.h  ai_ascript.cpp  ai_base_ai.h  ai_local.h  ai_manager.cpp  ai_manager.h  ailocal.h  ascript.cpp  baseai.cpp  baseai.h  bot.cpp  bot.h  bot_evolution_manager.cpp  botweightconfig.h  classifiedentitiescache.cpp  classifiedentitiescache.h  component.cpp  component.h  evolutionmanager.cpp  evolutionmanager.h  frameentitiescache.cpp  frameentitiescache.h  groundtracecache.cpp  groundtracecache.h  manager.cpp  manager.h  rewriteme.cpp  rewriteme.h  selection.h  trajectorypredictor.cpp  trajectorypredictor.h  vec3.h  weightconfig.cpp  weightconfig.h
source/game/ai/awareness/: EnemiesTracker.cpp  EventsTracker.cpp  PathBlockingTracker.cpp  SelectedEnemies.cpp  alerttracker.cpp  alerttracker.h  awarenesslocal.h  awarenessmodule.cpp  awarenessmodule.h  enemiestracker.cpp  enemiestracker.h  entitiespvscache.cpp  entitiespvscache.h  eventstracker.cpp  eventstracker.h  hazardsdetector.cpp  hazardsdetector.h  hazardsselector.cpp  hazardsselector.h  keptinfovpointtracker.cpp  keptinfovpointtracker.h  pathblockingtracker.cpp  pathblockingtracker.h  selectedenemies.cpp  selectedenemies.h  selectedenemy.cpp  selectedenemy.h
source/game/ai/combat/: AdvantageProblemSolver.cpp  SideStepDodgeProblemSolver.cpp  TacticalSpotsProblemSolver.cpp  advantageproblemsolver.cpp  advantageproblemsolver.h  coverproblemsolver.cpp  coverproblemsolver.h  dodgehazardproblemsolver.cpp  dodgehazardproblemsolver.h  firetargetcache.cpp  firetargetcache.h  sidestepdodgeproblemsolver.cpp  sidestepdodgeproblemsolver.h  spotsproblemsolverslocal.h  tacticalspotsproblemsolver.cpp  tacticalspotsproblemsolver.h  tacticalspotsregistry.cpp  tacticalspotsregistry.h  weaponselector.cpp  weaponselector.h  weaponsusagemodule.cpp  weaponsusagemodule.h
source/game/ai/movement/: BunnyHopAction.cpp  BunnyHopAction.h  BunnyTestingMultipleLookDirsAction.cpp  FallbackMovementAction.cpp  FallbackMovementAction.h  MovementPredictionContext.cpp  MovementPredictionContext.h  MovementState.cpp  UseWalkableTriggerScript.cpp  baseaction.cpp  baseaction.h  basemovementaction.cpp  basemovementaction.h  bestjumpablespotdetector.cpp  bestjumpablespotdetector.h  botinput.h  bunnyfollowingreachchainaction.cpp  bunnyfollowingreachchainaction.h  bunnyhopaction.cpp  bunnyhopaction.h  bunnytestingmultipledirsaction.cpp  bunnytestingmultipledirsaction.h  bunnytestingmultipleturnsaction.cpp  bunnytestingmultipleturnsaction.h  bunnytestingnextreachdirsaction.cpp  bunnytestingnextreachdirsaction.h  bunnytobestclusterpointaction.cpp  bunnytobestclusterpointaction.h  bunnytobestvisiblereachaction.cpp  bunnytobestvisiblereachaction.h  bunnytostairsorrampexitaction.cpp  bunnytostairsorrampexitaction.h  campaspotaction.cpp  campaspotaction.h  combatdodgetotargetaction.cpp  combatdodgetotargetaction.h  environmenttracecache.cpp  environmenttracecache.h  fallbackaction.cpp  fallbackaction.h  (+45 more)
source/game/ai/navigation/: AasWorld.cpp  aasareaswalker.h  aaselementsmask.cpp  aaselementsmask.h  aasroutecache.cpp  aasroutecache.h  aasstaticroutetable.cpp  aasstaticroutetable.h  aasworld.cpp  aasworld.h  fastroutingresultscache.cpp  fastroutingresultscache.h
source/game/ai/planning/: Actions.cpp  Actions.h  BotPlanner.cpp  BotPlanner.h  GoalEntities.h  Goals.cpp  Goals.h  ItemsSelector.cpp  PlanningModule.cpp  PlanningModule.h  actions.cpp  actions.h  advancetogoodpositionaction.cpp  attackadvancingtotargetaction.cpp  attackfromcurrentpositionaction.cpp  botplanner.cpp  botplanner.h  dodgetospotaction.cpp  fleetospotaction.cpp  goalentities.cpp  goalentities.h  goals.cpp  goals.h  gotoavailablepositionaction.cpp  gotorunawayelevatoractions.cpp  gotorunawayjumppadactions.cpp  itemsselector.cpp  (+27 more)
source/game/ascript/: ascript.cpp  local.h
source/server/: CMakeLists.txt  server.h  sv_ccmds.cpp  sv_client.cpp  sv_demos.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_mm.cpp  sv_motd.cpp  sv_oob.cpp  sv_send.cpp  sv_snap.cpp  sv_snap.h  sv_snaptables.cpp  sv_web.cpp
(+502 files in other folders)
